--- a/aimhi-chatbot/requirements.txt
+++ b/aimhi-chatbot/requirements.txt
@@ -2,3 +2,7 @@ Flask==2.3.0
 transitions==0.9.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
+spacy==3.7.0
+rapidfuzz==3.5.0
+textblob==0.17.1
+requests==2.31.0
