--- a/aimhi-chatbot/requirements.txt
+++ b/aimhi-chatbot/requirements.txt
@@ -6,3 +6,7 @@ spacy==3.7.0
 rapidfuzz==3.5.0
 textblob==0.17.1
 requests==2.31.0
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+pandas==2.1.3
+numpy==1.24.3
