refactor: enhance Dockerfile and app configuration; improve Supabase client error handling and logging

--- a/aimhi-chatbot/Dockerfile
+++ b/aimhi-chatbot/Dockerfile
@@ -27,5 +27,7 @@ EXPOSE 5000
 ENV FLASK_ENV=production \
     PORT=5000
 
-# Start with gunicorn (prod), respect PORT; app module is at /app/app.py
-CMD ["/bin/sh", "-lc", "exec gunicorn -b 0.0.0.0:${PORT:-5000} app:app"]
+# Start with gunicorn (prod), respect PORT and WEB_CONCURRENCY
+# - Workers are controlled via WEB_CONCURRENCY (default 2)
+# - Additional flags can be passed via GUNICORN_CMD_ARGS env var on the platform
+CMD ["/bin/sh", "-lc", "exec gunicorn -w ${WEB_CONCURRENCY:-2} -b 0.0.0.0:${PORT:-5000} app:app"]
